chart series support hatches, tdf#94227

Change-Id: Ib3a1ccda738091466d5e2866823f64b254ed5bab